manifests/frontend/services.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service 
spec:
  selector:
    app: frontend
  ports:  
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
