manifests/frontend/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend-route
spec:
  to:
    kind: Service
    name: frontend-service
  port:
    targetPort: 80 
  tls:
    termination: edge
